# battle-sim

./: CMakeLists.txt  go.sh
src/: EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  Troop.h  battlefield.h  main.cpp
src/combatants/: Attack.cpp  Attack.h  Combatant.cpp  Combatant.h  Intel.cpp  Intel.h  Ranged.cpp  Ranged.h
